--- a/templates/detail.html
+++ b/templates/detail.html
@@ -20,12 +20,12 @@
       <h1>{{contact.nickname}}</h1>
       <p>Phone: <b>{{contact.phone}}</b></p>
       <p>Time of creation: <kbd>{{contact.created.date()}}</kbd></p>
-      <p>Name    : <small> {{contact.name}} </small></p>
-      <p>Surname : <small> {{contact.surname}} </small></p>
-      <p>Phone   : <small> {{contact.phone}} </small></p>
-      <p>Email   : <small> {{contact.email}} </small></p>
-      <p>Birthday: <small> {{contact.birthday}} </small></p>
-      <p>Address : <small> {{contact.address}} </small></p>
+      <h2>Information</h2>
+      <p>Name    : <small> {{info.name}} </small></p>
+      <p>Surname : <small> {{info.surname}} </small></p>
+      <p>Email   : <small> {{info.email}} </small></p>
+      <p>Birthday: <small> {{info.birthday}} </small></p>
+      <p>Address : <small> {{info.address}} </small></p>
     </main>
   </body>
 </html>
