--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,11 @@
         </ul>
       </nav>
       {% for contact in contacts %}
+
       <ul>
         <li>
           <a href="/detail/{{contact.id}}" role="button" class="library"
-            >{{contact.name}}</a
+            >{{contact.nickname}}</a
           >
 
           <a href="/delete/{{contact.id}}" role="button" class="outline"
@@ -29,6 +30,7 @@
           >
         </li>
       </ul>
+
       {% endfor %}
     </main>
   </body>
